syntax = "proto3";

package api;
option go_package = "/api";
import "user.proto";
import "role.proto";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message SigninResponse {
  CurrentUser current_user = 1;
  string access_token = 2;
}

message SignoutRequest {}


message AccessListRequest {
  int64 id = 1;
}

message AccessListResponse {
  AccessList AccessList = 1;
}

service AuthService {

  // sign in user
  rpc Signin (google.protobuf.Empty) returns (SigninResponse){
    option (google.api.http) = {
      post: "/v1/signin"
    };

  }

  // sign out user
  rpc Signout (SignoutRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/v1/signout"
    };
  }

  // get user access list object
  rpc AccessList (AccessListRequest) returns (AccessListResponse){
    option (google.api.http) = {
      get: "/v1/access_list"
    };
  }
}

